@@ -1,7 +1,6 @@
 package org.gradle.internal.rustbridge.jvmhost;
 
 import org.gradle.api.logging.Logging;
-import org.gradle.api.model.Project;
 import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.artifacts.Dependency;
 import org.gradle.api.artifacts.result.ResolvedArtifactResult;
@@ -86,7 +85,7 @@ public class JvmHostServiceImpl {
      */
     public List<ProjectModelEntry> getProjectModels() {
         if (projectModelProvider == null) {
-            return List.of();
+            return java.util.Collections.emptyList();
         }
         return projectModelProvider.getProjectModels();
     }
@@ -99,7 +98,7 @@ public class JvmHostServiceImpl {
      */
     public List<ResolvedArtifactEntry> resolveArtifacts(String projectPath, String configurationName) {
         if (projectModelProvider == null) {
-            return List.of();
+            return java.util.Collections.emptyList();
         }
         return projectModelProvider.resolveArtifacts(projectPath, configurationName);
     }
